@@ -85,4 +85,22 @@ public class Bar {
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description>Integer array passed as argument</description>
+        <expected-problems>1</expected-problems>
+        <code><![CDATA[
+public class Test {
+  public void foo(Integer[] ints) {
+     // could just use Arrays.asList(ints)
+     List l = new ArrayList(10);
+     for (int i=0; i< 100; i++) {
+       l.add(ints[i]);
+     }
+     for (int i=0; i< 100; i++) {
+       l.add(a[i].toString()); // won't trigger the rule
+     }
+  }
+}
+        ]]></code>
+    </test-code>
 </test-data>
